# etl_python_duckdb

./: Dockerfile  README.md  app.py  pyproject.toml
