[tool.poetry]
name = "etl-python-duckdb"
version = "0.1.0"
description = ""
authors = ["LeoGrochoski <leogrochoski10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
